--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-bootstrap": "^2.9.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
