--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/storage": "^0.11.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -13,6 +14,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "firebase": "^10.4.0",
     "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -27,6 +29,8 @@
     "react-tabs": "^6.0.2",
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.32",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
