--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.32",
     "sweetalert2-react-content": "^5.0.7",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
